--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@ I’m passionate about using technology to make a positive impact in Vanuatu and
   </footer>
 
   <a href="#top" class="back-to-top" title="Back to Top">
-    <img src="./images/arrow-up.svg" alt="Back to Top" class="back-to-top__image"/>
+    <img src="arrow.svg" alt="Back to Top" class="back-to-top__image"/>
   </a>
   <script src="./index.js"></script>
   
